Some content page fixes: contentVisible functonality, dragging/clicking separation

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,5 +1,5 @@
 body {
-  width: 180px;
+  width: 186px;
   height: 120px;
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
